# monarch_feeder

./: .env.example  .gitignore  README.md  pyproject.toml  tasks.py
monarch_feeder/: core.py  main.py  monarch.py  sync.py  test_otp.py
monarch_feeder/accounts/: human_interest.py
monarch_feeder/auth/: extract_totp.py  otpauth_migrate.py  otpauth_migrate_pb2.py
monarch_feeder/claude_computer_use/computer_use_demo/: Dockerfile  example_human_interest.py  loop.py  programmatic_runner.py  requirements.txt  streamlit.py
monarch_feeder/claude_computer_use/human_interest/: Dockerfile  build_human_interest.sh  entrypoint_human_interest.sh  run_human_interest.sh
monarch_feeder/computer_use_demo/: Dockerfile  automation_orchestrator.py  entrypoint_generic.sh  models.py  programmatic_runner.py  requirements.txt  streamlit.py
monarch_feeder/computer_use_demo/prompts/: HUMAN_INTEREST_PROMPTS.py  RIPPLING_PROMPTS.py
monarch_feeder/computer_use_demo/tools/: __init__.py  groups.py  otp.py
monarch_feeder/scripts/: get_monarch_accounts.py  get_monarch_info.py  save_totp_secret.py  test_otp.py  utils.py
